Updated JSON structure

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crime-map",
   "version": "0.1.0",
-  "private": true,
+  "author": "Jagmit Gabba",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
