--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "react-scripts": "5.0.1"
     },
     "devDependencies": {
+        "@types/googlemaps": "^3.43.3",
+        "@types/node": "^20.10.5",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
         "typescript": "^4.9.5"
